Cross Browser and alignment correction

--- a/src/app/components/pages/user/leftsidebar/leftsidebar.component.scss
+++ b/src/app/components/pages/user/leftsidebar/leftsidebar.component.scss
@@ -165,6 +165,7 @@
             svg {
                 margin-top: 0.8rem;
                 width: 45px;
+                height: 45px;
             }
             &.active {
                 font-family: "proxima-nova", sans-serif;
